--- a/src/css/login.css
+++ b/src/css/login.css
@@ -4,12 +4,14 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 body {
-    background: #eee;
+    background: url("../img/3.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
 }
 .container {
     margin-top: 22vh;
-    height: 50vh;
-    padding: 15px 40px 10px 40px;
+    padding: 15px 40px 20px 40px;
     background: rgba(245, 245, 245, 0.4);
     border-radius: 6%;
 }
