--- a/src/css/register.css
+++ b/src/css/register.css
@@ -4,7 +4,10 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 body {
-    background: #eee;
+    background: url("../img/3.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
 }
 .container {
     margin-top: 10px;
