Added Email Field

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,7 +21,11 @@
             <label for="userid">Identification Number</label>
             <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number">
         </div>
-        <!-- <label for="door">Address</label> -->
+        <div class="form-group">
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" class="form-control" placeholder="Email Address">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
         <div class="form-row">
             <div class="form-group col-md-2">
                 <label for="door">Door</label>
