Added autofocus - Login/Register

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
             <label for="userid">Identification Number</label>
-            <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number">
+            <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number" autofocus>
         </div>
         <div class="form-group">
             <label for="email">Email Address</label>
