--- a/views/login.hbs
+++ b/views/login.hbs
@@ -25,8 +25,7 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
-        <div class="form-group alert alert-danger" id="errorMsg" style="display: none;">
-            UserID or Password cannot be empty
+        <div class="form-group alert alert-danger mx-auto" id="errorMsg" style="display: none">
         </div>
         <div class="form-row center">
             <button type="submit" class="btn btn-primary col-md-2" onclick="return validate();">Submit</button>
