--- a/views/register.hbs
+++ b/views/register.hbs
@@ -26,35 +26,36 @@
             <input type="email" id="email" name="email" class="form-control" placeholder="Email Address">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
+            <label for="door">Address</label>
         <div class="form-row">
             <div class="form-group col-md-2">
-                <label for="door">Door</label>
+                <!-- <label for="door">Door</label> -->
                 <input type="number" id="door" name="door" class="form-control" placeholder="Door">
             </div>
             <div class="form-group col-md-10">
-                <label for="street">Street</label>
+                <!-- <label for="street">Street</label> -->
                 <input type="text" id="street" name="street" class="form-control" placeholder="Street">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-7">
-                <label for="area">Area</label>
+                <!-- <label for="area">Area</label> -->
                 <input type="text" id="area" name="area" class="form-control" placeholder="Area">
             </div>
             <div class="form-group col-md-5">
-                <label for="pincode">Pincode</label>
+                <!-- <label for="pincode">Pincode</label> -->
                 <input type="number" id="pincode" name="pincode" class="form-control" placeholder="Pincode">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="state">State</label>
+                <!-- <label for="state">State</label> -->
                 <select id="state" name="state" class="form-control" onchange="fillCities();">
                     <option selected value="default">Choose State..</option>
                 </select>
             </div>
             <div class="form-group col-md-6">
-                <label for="city">City</label>
+                <!-- <label for="city">City</label> -->
                 <select id="city" name="city" class="form-control" disabled>
                     <option selected value="default">Choose City..</option>
                 </select>
