--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kural Register</title>
-
-    <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-
-    <!--Custom CSS-->
-    <link rel="stylesheet" href="/css/register.css">
-</head>
-<body>
-    <form action="" method="post" class="container col-md-4">
-        <div class="form-row">
-            <div class="heading center">Register to Kural</div>
-        </div>
+<div  class="col-lg-4 col-md-4 col-sm-8 container">
+    <div class="page-title text-center">Register</div>
+    <hr/>
+    <form action="" method="post">
         <div class="form-group">
             <label for="userid">Identification Number</label>
             <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number" autofocus>
@@ -72,19 +57,9 @@
         <div class="form-group alert alert-danger" id="errorMsg" style="display: none;">
             <span>These fields cannot be empty.</span>
         </div>
-        <div class="form-row center">
-            <button type="submit" onclick="return validate();" class="btn btn-primary col-md-2">Submit</button>
-            <button type="reset" class="btn btn-danger col-md-2">Reset</button>
+        <div class="form-group text-center">
+            <button type="submit" class="btn btn-outline-primary" onclick="return validate();" >Submit</button>
+            <button type="reset" class="btn btn-outline-danger">Reset</button>
         </div>
     </form>
-    <!--jQuery JS-->
-    <script src="/jquery/jquery.min.js"></script>
-
-    <!--Custom JS-->
-    <!--Form Validation-->
-    <script src= "/js/validate.js"></script>
-    <!--Add States & Cities-->
-    <script src="/js/states-cities-list.js"></script>
-    <script src="/js/states-cities.js"></script>
-</body>
-</html>
+</div>
