--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<div  class="col-lg-4 col-md-4 col-sm-8 container">
+<div  class="container">
     <div class="page-title text-center">Register</div>
     <hr/>
     <form action="" method="post">
@@ -9,15 +9,15 @@
         <div class="form-group">
             <label for="email">Email Address</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="Email Address">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone else.</small>
         </div>
             <label for="door">Address</label>
         <div class="form-row">
-            <div class="form-group col-md-2">
+            <div class="form-group col-md-3">
                 <!-- <label for="door">Door</label> -->
                 <input type="number" id="door" name="door" class="form-control" placeholder="Door">
             </div>
-            <div class="form-group col-md-10">
+            <div class="form-group col-md-9">
                 <!-- <label for="street">Street</label> -->
                 <input type="text" id="street" name="street" class="form-control" placeholder="Street">
             </div>
@@ -63,3 +63,6 @@
         </div>
     </form>
 </div>
+
+<script src="/js/states-cities-list.js"></script>
+<script src="/js/states-cities.js"></script>
