--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,15 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
-        <div class="form-group alert alert-danger" id="errorMsg" style="display: none"></div>
+        {{!-- <div class="form-group alert alert-danger" id="errorMsg" style="display: none"></div> --}}
+        <div class="form-group">
+            <div class="form-row">
+                <a href="#" id="forgotPassword" class="link">Forgot Password?</a>
+            </div>
+            <div class="form-row">
+                <a href="/register" id="newToKural" class="link">New to kural? Register</a>
+            </div>
+        </div>
         <div class="form-group text-center">
             <button type="submit" class="btn btn-outline-primary" onclick="return validate();">Submit</button>
         </div>
