--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,10 +4,11 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 :root {
-	--blendColor: rgba(224, 224, 255, 0.75);
+	--blendColor: rgba(224, 224, 255, 0.85);
 }
 body {
-    background: url("../img/1.jpg");
+    background: url("../img/currency.jpg");
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
