Added Govt & Public Register + Minor render NavLinks changes

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,7 +1,10 @@
 <div class="container text-center">
-	Welcome to Kural
+	<div class="page-title">Welcome to Kural</div>
 	<hr>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa nostrum magnam, culpa est delectus! Id molestiae, repellat odit facilis alias hic impedit possimus inventore delectus praesentium! Possimus quas fugit ducimus esse ipsam quia facilis, impedit dicta sit et ut fuga, a! Iure eius, itaque pariatur a quasi omnis et cumque.
 	<hr>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse a ut harum, soluta quaerat velit facilis officiis eveniet sit doloremque odit autem distinctio reiciendis commodi vitae nulla incidunt vel repellendus, nostrum, alias explicabo suscipit. Consectetur eum, nihil quia hic neque ipsa eius sed quod quis. Placeat quas dolore id, voluptates.
+	<hr>
+	<a href="/login" class="btn btn-success">Login</a>
+	<a href="/register" class="btn btn-primary">Join Kural</a>
 </div>
