Major - Grouped NavLinks, Changed Validation

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,6 +19,11 @@ body {
 .navbar-nav {
 	padding-right: 2em;
 }
+.nav-link.active {
+	background-color: rgba(0, 0, 0, 0.1);
+	border-radius: 0.2em;
+	border-bottom: 0.05em solid black;
+}
 .navbar {
 	height: 3em;
 	background-color: var(--blendColor);
