--- a/views/register/public.hbs
+++ b/views/register/public.hbs
@@ -1,7 +1,7 @@
 <div  class="container">
     <div class="page-title text-center">Public Registration</div>
     <hr/>
-    <form action="" method="post">
+    <form action="/register/public" method="post">
         <div class="form-group">
             <label for="userid">Identification Number</label>
             <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number" autofocus>
@@ -66,3 +66,4 @@
 
 <script src="/js/states-cities-list.js"></script>
 <script src="/js/states-cities.js"></script>
+<script src="/js/validate.js"></script>
