--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,12 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
-        {{!-- <div class="form-group alert alert-danger" id="errorMsg" style="display: none"></div> --}}
+        <div class="form-group alert alert-danger" id="errorMsg" style="display: none"></div>
+        {{#if invalidAuthenticate}}
+            <div class="form-group alert alert-danger" id="invalidAuthenticate">
+                {{errMsg}}
+            </div>
+        {{/if}}
         <div class="form-group">
             <div class="form-row">
                 <a href="#" id="forgotPassword" class="link">Forgot Password?</a>
@@ -24,3 +29,4 @@
         </div>
     </form>
 </div>
+<script src="/js/validate.js"></script>
