--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,8 +20,6 @@ body {
 	padding-right: 2em;
 }
 .nav-link.active {
-	background-color: rgba(0, 0, 0, 0.1);
-	border-radius: 0.2em;
 	border-bottom: 0.05em solid black;
 }
 .navbar {
@@ -49,6 +47,9 @@ hr {
 }
 .link:hover {
 	text-decoration: none;
+}
+.required-input {
+	color: red;
 }
 
 @media(max-width: 575px) {
