--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,14 +3,13 @@
     <hr/>
     <form action="" method="post">
         <div class="form-group">
-            <label for="userid">Identification Number</label>
+            <label for="userid">Identification Number <span class="required-input">*</span> </label>
             <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number" autofocus>
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Password <span class="required-input">*</span> </label>
             <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
-        <div class="form-group alert alert-danger" id="errorMsg" style="display: none"></div>
         {{#if invalidAuthenticate}}
             <div class="form-group alert alert-danger" id="invalidAuthenticate">
                 {{errMsg}}
