--- a/views/login.hbs
+++ b/views/login.hbs
@@ -17,7 +17,7 @@
         {{/if}}
         <div class="form-group">
             <div class="form-row">
-                <a href="#" id="forgotPassword" class="link">Forgot Password?</a>
+                <a href="/login/reset" id="forgotPassword" class="link">Forgot Password?</a>
             </div>
             <div class="form-row">
                 <a href="/register" id="newToKural" class="link">New to kural? Register</a>
