Major Structure Changes

--- a/views/layouts/innerLayout.hbs
+++ b/views/layouts/innerLayout.hbs
@@ -11,8 +11,8 @@
 
     <!--Custom CSS-->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/inner.css">
     <link rel="stylesheet" type="text/css" href="/css/navbar.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
     <!--jQuery JS-->
     <script src="/jquery/jquery.min.js"></script>
