--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
@@ -13,29 +15,4 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
-}
-.container {
-	margin-top: 3em;
-	margin-bottom: 3em;
-	background-color: var(--blendColor);
-	padding: 10px 20px;
-	border-radius: 5%;
-	width: 35vw;
-}
-.page-title {
-	font-size: 1.4em;
-	font-weight: 400;
-}
-hr {
-	margin: 0.5em 0;
-}
-.link {
-	margin: 0 0 0.25em 0.25em;
-	color: black;
-}
-.link:hover {
-	text-decoration: none;
-}
-.required-input {
-	color: red;
 }
