Added passport authentication & flash messages

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,7 +7,7 @@
     <div class="navbar-nav ml-auto">
       {{#if user}}
         <a class="nav-item nav-link" href="/profile">Profile</a>
-        <a class="nav-item nav-link" href="/profile">Logout</a>
+        <a class="nav-item nav-link" href="/logout">Logout</a>
       {{else}}
         <a class="nav-item nav-link" href="/login">Login</a>
         <a class="nav-item nav-link" href="/register">Register</a>
