--- a/views/register/government.hbs
+++ b/views/register/government.hbs
@@ -57,3 +57,8 @@
 <script src="/js/states-cities-list.js"></script>
 <script src="/js/states-cities.js"></script>
 <script src="/js/validate.js"></script>
+
+<!-- Custom Page Title -->
+<script type="text/javascript">
+    document.title = "Government Registration";
+</script>
