--- a/views/register/register.hbs
+++ b/views/register/register.hbs
@@ -17,3 +17,8 @@
         <a href="/register/government" class="btn btn-warning">Government</a>
     </div>
 </div>
+
+<!-- Custom Page Title -->
+<script type="text/javascript">
+    document.title = "Register to Kural";
+</script>
