--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -1,6 +1,19 @@
-<div  class="col-lg-4 col-md-4 col-sm-8 container">
+<div class="col-lg-4 col-md-4 col-sm-8 container">
     <div class="page-title text-center">Login</div>
     <hr/>
+
+    {{#if success_msg}}
+       <div class="alert alert-success">{{success_msg}}</div>
+    {{/if}}
+
+    {{#if error_msg}}
+        <div class="alert alert-danger">{{error_msg}}</div>
+    {{/if}}
+
+    {{#if error}}
+        <div class="alert alert-danger">{{error}}</div>
+    {{/if}}
+
     <form action="" method="post">
         <div class="form-group">
             <label for="userid">Identification Number <span class="required-input">*</span> </label>
@@ -10,11 +23,6 @@
             <label for="password">Password <span class="required-input">*</span> </label>
             <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
-        {{#if invalidAuthenticate}}
-            <div class="form-group alert alert-danger" id="invalidAuthenticate">
-                {{errMsg}}
-            </div>
-        {{/if}}
         <div class="form-group">
             <div class="form-row">
                 <a href="/login/reset" id="forgotPassword" class="link">Forgot Password?</a>
@@ -29,3 +37,8 @@
     </form>
 </div>
 <script src="/js/validate.js"></script>
+
+<!-- Custom Page Title -->
+<script type="text/javascript">
+    document.title = "Login to Kural";
+</script>
