--- a/views/login/reset.hbs
+++ b/views/login/reset.hbs
@@ -1,19 +1,22 @@
 <div  class="col-lg-4 col-md-4 col-sm-8 container">
     <div class="page-title text-center">Forgot password</div>
     <hr/>
+    {{#if error_msg}}
+        <div class="alert alert-danger">{{error_msg}}</div>
+    {{/if}}
     <form action="" method="post" class="needs-validation">
         <div class="form-group">
             <label for="userid">Please enter your registered Identification Number <span class="required-input">*</span> </label>
             <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number" autofocus>
         </div>
-        {{#if error}}
-            <div class="alert alert-danger" id="error">
-                {{errMsg}}
-            </div>
-        {{/if}}
         <div class="form-group text-center">
             <button type="submit" class="btn btn-outline-primary" onclick="return validate();">Submit</button>
         </div>
     </form>
 </div>
 <script src="/js/validate.js"></script>
+
+<!-- Custom Page Title -->
+<script type="text/javascript">
+    document.title = "Reset Password";
+</script>
