--- a/src/css/inner.css
+++ b/src/css/inner.css
@@ -9,17 +9,42 @@
 	color: white;
 	height: calc(100vh - 3em);
 	padding: 5px;
-}
-.left {
-	grid-area: sidebar-left;
-}
-.right {
-	grid-area: sidebar-right;
+	overflow: hidden;
+	position: absolute;
+	background: rgb(0, 31, 63, 0.5);
+	background: rgb(0, 31, 63, 0.5);
+	width: 15%;
 }
 .post-container {
-	/* padding: 10px; */
+	grid-area: center;
+	margin-top: 0.8em;
+	padding: 10px 20px;
+	overflow: auto;
+	height: 90vh;
 }
 .post {
 	padding: 10px;
-	background: rgba(80, 80, 255, .7);
+	margin: 1.5em;
+	background-color: #001f3f;
+	color: #7FDBFF;
+	border-radius: 3%;
+}
+textarea {
+	margin: auto;
+	background: #eee !important;
+}
+.post-container::-webkit-scrollbar {
+    width: 0.5em;
+    border-radius: 10px;
+    background-color: ;
+}
+.post-container::-webkit-scrollbar-track {
+    -webkit-border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,1);
+    border-radius: 10px;
+}
+.post-container::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #ddd;
 }
