--- a/views/layouts/innerLayout.hbs
+++ b/views/layouts/innerLayout.hbs
@@ -15,7 +15,7 @@
 
     <!--jQuery JS-->
     <script src="/jquery/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.bundle.js"></script>
 
     <!--Custom JS-->
 
