--- a/views/register/government.hbs
+++ b/views/register/government.hbs
@@ -1,51 +1,60 @@
-<div  class="container">
+<div  class="col-lg-4 col-md-4 col-sm-8 container">
     <div class="page-title text-center">Government Registeration</div>
     <hr/>
     <form action="/register/government" method="post">
         <div class="form-group">
-            <label for="userid">Identification Number <span class="required-input">*</span> </label>
+            <label for="userid">Identification Number</label>
             <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number" autofocus>
         </div>
         <div class="form-group">
-            <label for="email">Email Address <span class="required-input">*</span> </label>
+            <label for="email">Email Address</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="Email Address">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone else.</small>
         </div>
         <div class="form-group">
-            <label for="designation">Designation <span class="required-input">*</span> </label>
-            <input type="text" id="designation" name="designation" class="form-control" placeholder="Designation" autofocus>
+            <label for="desig">Designation</label>
+            <input type="text" id="desig" name="desig" class="form-control" placeholder="Designation" autofocus>
+            <small id="emailHelp" class="form-text text-muted">Enter your designation.</small>
         </div>
-        <label for="Area">Representing Area <span class="required-input">*</span> </label>
+        <label for="Area">Representing Area</label>
         <div class="form-row">
             <div class="form-group col-md-7">
+                <!-- <label for="area">Area</label> -->
                 <input type="text" id="area" name="area" class="form-control" placeholder="Area">
             </div>
             <div class="form-group col-md-5">
+                <!-- <label for="pincode">Pincode</label> -->
                 <input type="number" id="pincode" name="pincode" class="form-control" placeholder="Pincode">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
+                <!-- <label for="state">State</label> -->
                 <select id="state" name="state" class="form-control" onchange="fillCities();">
                     <option selected value="default">Choose State..</option>
                 </select>
             </div>
             <div class="form-group col-md-6">
+                <!-- <label for="city">City</label> -->
                 <select id="city" name="city" class="form-control" disabled>
                     <option selected value="default">Choose City..</option>
                 </select>
             </div>
         </div>
         <div class="form-group">
-            <label for="superior">Identification Number Of Superior <span class="required-input">*</span> </label>
-            <input type="number" id="superior" name="superior" class="form-control" placeholder="Identification Number Of Superior" autofocus>
+            <label for="Superior">Identification Number Of Superior</label>
+            <input type="number" id="Superior" name="Superior" class="form-control" placeholder="Identification Number Of Superior" autofocus>
         </div>
         <div class="form-group">
-            <label for="password1">Password <span class="required-input">*</span> </label>
+            <label for="password1">Password</label>
             <input type="password" name="password1" class="form-control" id="password1" placeholder="Password">
         </div>
         <div class="form-group">
-            <label for="password2">Confirm Password <span class="required-input">*</span> </label>
+            <label for="password2">Confirm Password</label>
             <input type="password" name="password2" class="form-control" id="password2" placeholder="Confirm Password">
+        </div>
+        <div class="form-group alert alert-danger" id="errorMsg" style="display: none;">
+            These fields cannot be empty.
         </div>
         <div class="form-group text-center">
             <button type="submit" class="btn btn-outline-primary" onclick="return validate();" >Submit</button>
@@ -53,10 +62,6 @@
         </div>
     </form>
 </div>
-
-<script src="/js/states-cities-list.js"></script>
-<script src="/js/states-cities.js"></script>
-<script src="/js/validate.js"></script>
 
 <!-- Custom Page Title -->
 <script type="text/javascript">
