--- a/views/register/public.hbs
+++ b/views/register/public.hbs
@@ -1,51 +1,72 @@
-<div  class="container">
+<div class="col-lg-4 col-md-4 col-sm-8 container">
     <div class="page-title text-center">Public Registration</div>
     <hr/>
     <form action="/register/public" method="post">
         <div class="form-group">
-            <label for="userid">Identification Number <span class="required-input">*</span> </label>
+            <label for="userid">Identification Number</label>
             <input type="number" id="userid" name="userid" class="form-control" placeholder="Identification Number" autofocus>
+            <div class="invalid-feedback">
+                Please enter your User ID.
+            </div>
         </div>
         <div class="form-group">
-            <label for="email">Email Address <span class="required-input">*</span> </label>
+            <label for="email">Email Address</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="Email Address">
+            <div class="invalid-feedback">
+                Please enter your Email Address.
+            </div>
         </div>
-            <label for="door">Address <span class="required-input">*</span> </label>
+            <label for="door">Address</label>
         <div class="form-row">
             <div class="form-group col-md-3">
+                <!-- <label for="door">Door</label> -->
                 <input type="number" id="door" name="door" class="form-control" placeholder="Door">
             </div>
             <div class="form-group col-md-9">
+                <!-- <label for="street">Street</label> -->
                 <input type="text" id="street" name="street" class="form-control" placeholder="Street">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-7">
+                <!-- <label for="area">Area</label> -->
                 <input type="text" id="area" name="area" class="form-control" placeholder="Area">
             </div>
             <div class="form-group col-md-5">
+                <!-- <label for="pincode">Pincode</label> -->
                 <input type="number" id="pincode" name="pincode" class="form-control" placeholder="Pincode">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
+                <!-- <label for="state">State</label> -->
                 <select id="state" name="state" class="form-control" onchange="fillCities();">
                     <option selected value="default">Choose State..</option>
                 </select>
+                <div class="invalid-feedback">
+                    Please select your State.
+                </div>
             </div>
             <div class="form-group col-md-6">
+                <!-- <label for="city">City</label> -->
                 <select id="city" name="city" class="form-control" disabled>
                     <option selected value="default">Choose City..</option>
                 </select>
+                <div class="invalid-feedback">
+                    Please select your City.
+                </div>
             </div>
         </div>
         <div class="form-group">
-            <label for="password1">Password <span class="required-input">*</span> </label>
+            <label for="password1">Password</label>
             <input type="password" name="password1" class="form-control" id="password1" placeholder="Password">
         </div>
         <div class="form-group">
-            <label for="password2">Confirm Password <span class="required-input">*</span> </label>
+            <label for="password2">Confirm Password</label>
             <input type="password" name="password2" class="form-control" id="password2" placeholder="Confirm Password">
+        </div>
+        <div class="form-group custom-control invalid-feedback" id="errorMsg" style="display: none;">
+            These field(s) cannot be empty
         </div>
         <div class="form-group text-center">
             <button type="submit" class="btn btn-outline-primary" onclick="return validate();" >Submit</button>
@@ -57,7 +78,6 @@
 <script src="/js/states-cities-list.js"></script>
 <script src="/js/states-cities.js"></script>
 <script src="/js/validate.js"></script>
-
 <!-- Custom Page Title -->
 <script type="text/javascript">
     document.title = "Public Registration";
