--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,9 +1,18 @@
-<div class="container text-center">
+<div class="container text-center" style="width: 70%">
 	<div class="page-title">Welcome to Kural</div>
 	<hr>
 	Kural is an initiative to bridge the gap between public and government.
 	<hr>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse a ut harum, soluta quaerat velit facilis officiis eveniet sit doloremque odit autem distinctio reiciendis commodi vitae nulla incidunt vel repellendus, nostrum, alias explicabo suscipit. Consectetur eum, nihil quia hic neque ipsa eius sed quod quis. Placeat quas dolore id, voluptates.
+	The system identifies each individual of the country by an unique ID such as Aadhar, and group them based on their geographical hierarchy, ie. using their address. If an individual has an issue say, in his street or area, he can raise a "post", something similar to the post in the social media sites, which will be displayed in the news feed of all who live in that area (in that geo-hierarchy). This post should be resolved by the corresponding local body authority, say the MLA, within a span of 1-5 days based on the priority, which is decided by the number of people accepting the raised post, something like an up vote. If the problem is not resolved within the time span, the post is pushed to the next higher level of political authority and all people who come under that hierarchy can view it, displaying the inefficiency of the respective authority. 
+	<hr>
+	The idea may sound simple, but it addresses and solves the main issues standing in the way of a developing nation; 
+	<ul style="text-align: left">
+		<li>The lack of information and documented communication between public and government.</li>
+		<li>The irresponsibility and careless attitude of some political authorities.</li>
+		<li>In India, if one were to raise a problem, corruption stands in the way, Kural to certain extent solves this problem.</li>
+	</ul>
+	Kural, if implemented in the right way, can serve as a powerful tool to bring about change for good.
+
 	<hr>
 	<a href="/login" class="btn btn-success">Login</a>
 	<a href="/register" class="btn btn-primary">Join Kural</a>
